@@ -864,7 +864,14 @@ class Main(Gtk.Application):
             halign=Gtk.Align.START)
         self.tooltips.set_tip(label, page.name)
         self.tooltips.enable()
-        hbox.pack_start(label, expand=True, fill=True, padding=0)
+
+        def remove_book_middle_click(widget, event):
+            if event.button == 2:
+                return self._sig_remove_book(widget, page.widget)
+        eventbox = Gtk.EventBox()
+        eventbox.connect('button-press-event', remove_book_middle_click)
+        eventbox.add(label)
+        hbox.pack_start(eventbox, expand=True, fill=True, padding=0)
 
         button = Gtk.Button()
         button.set_relief(Gtk.ReliefStyle.NONE)
