@@ -1,3 +1,4 @@
+* Close tab with mouse middle click
 * Support language suffix in CSV import
 
 Version 7.2.0 - 2024-04-29
